[package]
name = "reis"
version = "0.1.0"
license = "MIT"
description = "Pure Rust implementation of libei/libeis protocol."
homepage = "https://github.com/ids1024/reis"
keywords = ["libei", "libeis", "wayland"]
edition = "2021"

[dependencies]
calloop = { version = "0.12.3", optional = true }
rustix = { version = "0.38.3", features = ["event", "fs", "net"] }
futures = { version = "0.3.28", optional = true }
tokio = { version = "1.31.0", features = ["net"], optional = true }

[dev-dependencies]
ashpd = "0.6.8"
futures-executor = "0.3.29"
once_cell = "1.17.1"
xkbcommon = "0.7.0"
tokio = { version = "1.31.0", features = ["rt", "macros"] }
signal-hook = "0.3.17"
pollster = "0.3.0"

[features]
tokio = ["dep:tokio", "futures"]
# Experimental and somewhat incomplete
calloop = ["dep:calloop"]

[[example]]
name = "receive"
required-features = ["tokio"]

[[example]]
name = "list-devices"
required-features = ["tokio"]

[[example]]
name = "reis-demo-server"
required-features = ["calloop"]
