[package]
name = "reis"
version = "0.6.1"
license = "MIT"
description = "Pure Rust implementation of libei/libeis protocol."
repository = "https://github.com/ids1024/reis"
keywords = ["libei", "libeis", "wayland"]
edition = "2021"
rust-version = "1.71.1"

[dependencies]
calloop = { version = "0.14.0", optional = true }
rustix = { version = "1.0.7", features = ["event", "fs", "net", "time"] }
futures = { version = "0.3.28", optional = true }
tokio = { version = "1.31.0", features = ["net"], optional = true }
enumflags2 = "0.7.12"
log = "0.4.29"

[dev-dependencies]
ashpd = "0.12.0"
futures-executor = "0.3.29"
once_cell = "1.17.1"
xkbcommon = "0.9.0"
tokio = { version = "1.31.0", features = ["rt", "macros"] }
signal-hook = "0.4.1"
pollster = "0.4.0"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
# Blocked by MSRV
#allow_attributes = "warn"
#allow_attributes_without_reason = "warn"
#should_panic_without_expect = "warn"
str_to_string = "warn"
string_to_string = "warn"
cast_possible_wrap = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
tokio = ["dep:tokio", "futures"]
# Experimental and somewhat incomplete
calloop = ["dep:calloop"]

[[example]]
name = "receive"
required-features = ["tokio"]

[[example]]
name = "list-devices"
required-features = ["tokio"]

[[example]]
name = "type-text"
required-features = ["calloop"]


[[example]]
name = "reis-demo-server"
required-features = ["calloop"]
